<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewG1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Read"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewG12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Achieve"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/RadioGroupG1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonG1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/radioButtonG12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewG2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Arrive"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewG22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Achieve"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/RadioGroupG2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonG2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/radioButtonG22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewG3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attempt"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewG32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Achieve"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/RadioGroupG3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonG3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/radioButtonG32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PR"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextReflection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/K" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>